# minotaur

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTORS  CONTRIBUTORS.md  LICENSE  Makefile.manual  MinotaurConfig.h.manual  README  README.md  TODO  Version.h.manual
doc/: Makefile.old  compile.md  design.tex  doxyfile  footer.html  mainpage.h  mainpage.md  release.md  styleguide.h  title.tex
doc/logo/: Minotaur.eps  axe.txt  old.eps
doc/manual/: Makefile  MinotaurDevelGuide.tex  guide.cfg  install.tex  intro.tex  qg-ex.tex  title.tex  trouble.tex
examples/: QPDRelaxer.h  knapsack_bnb.cpp  knapsack_bnb.py  milp_large_bnb.cpp  milp_large_bnb.py  milp_small_bnb.cpp  milp_small_bnb.py  minlp_qg.cpp  minlp_qg.py  qcqp_glob.cpp  qcqp_glob.py  qp_bnb.cpp  qp_bnb.py  test1.mod  test1.nl  test2.mod  test2.nl  test3.mod  test3.nl  test4.mod  test4.nl
examples/ampl-filter/: Makefile  bqpd-qp.cpp  filter-qp.cpp
examples/benders/: .depend  Makefile  pbdlp.cpp  sbdlp.cpp
examples/bilinear/: Makefile  bilinear-relax.cpp  ex1.mod  ex4.nl
examples/cguseqflf/: Makefile  cguseqflf.cpp
examples/knapsack/: Makefile  knapsack.cpp  main.f
examples/knapsack_bnb/: Makefile  knapsack_bnb.py
examples/mahditest/: Makefile  Makefile.jim  Makefile.mahdi  acctest.cpp  testproj.cpp
examples/milp_large_bnb/: Makefile  milp_large_bnb.cpp  milp_large_bnb.py
examples/milp_small_bnb/: Makefile  milp_small_bnb.py
examples/minlp_qg/: Makefile  minlp_qg.cpp  minlp_qg.py
examples/multilinear.old/: Makefile  MultilinearFormulation.cpp  MultilinearFormulation.h  README.txt  formtest.cpp  makerand.py  multilinear.cpp  (+1 more)
scripts/: ampl_test.run  build_externals  build_with_externals  build_without_externals  cfloc.py  change_copyright.sh  change_copyright_2.sh  change_emacs.sh  daily-lnx-iit-test.sh  daily-lnx-test.sh  daily-mac-test.sh  daily-src-tarball.sh  edgecross10-040.lp  edgecross40.mod  expprof.py  filter_lic.txt  m2ai  mac-test.sh  minlp-test.py  mpsi.mod  polip2ampl.py  report.py  report2.py  report_outputs.py  report_root.py  report_rough.py  rogue-files.py  rough.txt  run.sh  run_pyomo.py  sambal.lp  st_cqpjk1.lp  varBounds.py
src/: CMakeLists.txt
src/algorithms/: Bnb.cpp  Bnb.h  BnbMain.cpp  Bnc.cpp  CMakeLists.txt  Glob.cpp  Glob.h  GlobMain.cpp  LSTOA.cpp  McBnb.cpp  McQG.cpp  McQGAdv.cpp  MiDfo.cpp  MsBnb.cpp  OA.cpp  QG.cpp  QG2.cpp  QG2.h  QGAdv.cpp  QGMain.cpp  QGPar.cpp  QPDive.cpp  Solver.cpp  Solver.h  mipdecoqg.cpp  polynomial-solver.cpp  qg.cpp
src/base/: .CxQuadHandler.cpp.swp  .CxQuadHandler.h.swp  .Handler.h.swp  .QGHandler.cpp.swp  .QGHandler.h.swp  .QuadHandler.cpp.swp  .QuadHandler.h.swp  .QuadraticFunction.cpp.swp  .QuadraticFunction.h.swp  .Relaxation.cpp.swp  .Relaxation.h.swp  .SimpleTransformer.cpp.swp  .SimpleTransformer.h.swp  ActiveNodeStore.h  AlgebraicConstraint.cpp  AlgebraicConstraint.h  AnalyticalCenter.cpp  AnalyticalCenter.h  BndProcessor.cpp  BndProcessor.h  BrCand.cpp  BrCand.h  BrVarCand.cpp  BrVarCand.h  Branch.cpp  Branch.h  BranchAndBound.cpp  BranchAndBound.h  Brancher.cpp  Brancher.h  CGraph.cpp  CGraph.h  CGraphPers.cpp  CGraphPers.h  CMakeLists.txt  CNode.cpp  CNode.h  Chol.cpp  Chol.h  ConBoundMod.cpp  (+285 more)
src/base/linalg/: Matrix.h  SMatrix.h  Vector.h
src/engines/: CMakeLists.txt  EngineFactory.cpp  EngineFactory.h
src/engines/Bqpd/: BqpdEngine.cpp  BqpdEngine.h  BqpdEngineTypes.h  CMakeLists.txt
src/engines/Cbc/: CMakeLists.txt  CbcEngine.cpp  CbcEngine.h
src/engines/Cplex/: CMakeLists.txt  CplexLPEngine.cpp  CplexLPEngine.h  CplexMILPEngine.cpp  CplexMILPEngine.h
src/engines/FilterSQP/: FilterSQPEngine.cpp  FilterSQPEngine.h  FilterSQPEngineTypes.h
src/engines/Ipopt/: IpoptEngine.cpp  IpoptEngine.h  IpoptEngineTnlp.h
src/engines/OsiLP/: OsiLPEngine.cpp  OsiLPEngine.h
src/engines/qpOASES/: qpOASESEngine.cpp  qpOASESEngine.h
src/interfaces/: AMPLHessian.cpp  AMPLHessian.h  AMPLInterface.cpp  AMPLInterface.h  AMPLJacobian.cpp  AMPLJacobian.h  AMPLNonlinearFunction.cpp  AMPLNonlinearFunction.h  BqpdEngine.cpp  BqpdEngine.h  BqpdEngineTypes.h  CbcEngine.cpp  CbcEngine.h  CplexLPEngine.cpp  CplexLPEngine.h  CplexMILPEngine.cpp  CplexMILPEngine.h  EngineFactory.cpp  EngineFactory.h  FilterSQPEngine.cpp  FilterSQPEngine.h  FilterSQPEngineTypes.h  IpoptEngine.cpp  IpoptEngine.h  IpoptEngineTnlp.h  OsiLPEngine.cpp  OsiLPEngine.h  UnoEngine.cpp  UnoEngine.h  UnoModel.h  qpOASESEngine.cpp  qpOASESEngine.h
src/interfaces/ampl/: AMPLHessian.cpp  AMPLHessian.h  AMPLInterface.cpp  AMPLInterface.h  AMPLJacobian.cpp  AMPLJacobian.h  AMPLNonlinearFunction.cpp  AMPLNonlinearFunction.h  CMakeLists.txt
src/solvers/: Bnb.cpp  Bnb.h  BnbDistPar.cpp  BnbDistPar.h  BnbDistParMain.cpp  BnbMain.cpp  BnbPar.cpp  BnbPar.h  BnbParMain.cpp  Glob.cpp  Glob.h  GlobMain.cpp  LSTOA.cpp  McQG.cpp  McQGAdv.cpp  MiDfo.cpp  MsBnb.cpp  MultiStart.cpp  MultiStart.h  MultiStartMain.cpp  OA.cpp  QG.cpp  QG.h  QG2.cpp  QG2.h  QGMain.cpp  QGPar.cpp  QGPar.h  QGParMain.cpp  SolCheck.cpp  SolCheck.h  SolCheckMain.cpp  SolChecker.cpp  SolChecker.h  SolCheckerMain.cpp  Solver.cpp  Solver.h  mipdecoqg.cpp
src/testing/: AMPLBqpdUT.cpp  AMPLBqpdUT.h  AMPLCGraphUT.cpp  AMPLCGraphUT.h  AMPLCbcUT.cpp  AMPLCbcUT.h  AMPLFilterSQPUT.cpp  AMPLFilterSQPUT.h  AMPLInstanceUT.cpp  AMPLInstanceUT.h  AMPLIpoptUT.cpp  AMPLIpoptUT.h  AMPLOsiUT.cpp  AMPLOsiUT.h  CGraphUT.cpp  CGraphUT.h  CMakeLists.txt  EnvironmentUT.cpp  EnvironmentUT.h  FunctionUT.cpp  FunctionUT.h  HessianOfLagUT.cpp  HessianOfLagUT.h  IpoptEngineUT.cpp  IpoptEngineUT.h  JacobianUT.cpp  JacobianUT.h  LapackUT.cpp  LapackUT.h  LinearFunctionUT.cpp  LinearFunctionUT.h  LoggerUT.cpp  LoggerUT.h  NLPBnbUT.cpp  NLPBnbUT.h  ObjectiveUT.cpp  ObjectiveUT.h  OperationsUT.cpp  OperationsUT.h  PerspRefUT.cpp  (+14 more)
src/testing/instances/: minlp_eg0.mod  poly.mod  q0.ipynb
src/testing/lists/: 3k-nz-miplib17.csv  cx-opt-minlplib.solu  cx-qcqp-minlplib.csv  minlplib.solu  miplib3.solu  mitt-convex-disc-qplib.csv  ncx-qcqp-minlplib.csv  opt-minlplib.solu  qcqp-minlplib.csv  qplib.solu  small-qcqp-minlplib.csv
(+5208 files in other folders)
